--- a/fronte/app/styles/public/style.css
+++ b/fronte/app/styles/public/style.css
@@ -5,6 +5,7 @@ body {
   background-color: #fff;
   text-align: center;
   line-height: 1.4em;
+  background-color: blanchedalmond;
 }
 
 main {
@@ -143,4 +144,18 @@ footer {
 .wrapper .github:hover .tooltip::before {
   background-color: #333333;
   color: #ffffff;
+}
+
+#header{
+  font-family:'Times New Roman', Times, serif;
+}
+#short{
+  position: relative;
+  width: 38%;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 20px;
+  text-align: center;
+  background-color:darkgray ;
+  display:none;
 }
