--- a/fronte/app/styles/public/style.css
+++ b/fronte/app/styles/public/style.css
@@ -37,6 +37,7 @@ button{
   background-position: -200px center;
   background-repeat: no-repeat;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border-radius: 50%;
 }
   button:hover{
     transform: scale(1.1);
