--- a/fronte/app/styles/public/style.css
+++ b/fronte/app/styles/public/style.css
@@ -28,6 +28,8 @@ button{
   text-decoration: none;
   text-transform: uppercase;
   /* padding: 10px 23px; */
+  width: 5em;
+  height: 5em;
   background-color: #182e9b;
   transition: transform 500ms;
   /* background-position 800ms $ease-in-out-back;
@@ -103,7 +105,7 @@ footer {
   bottom:0%;
   font-family: "Poppins", sans-serif;
   height: 70px;
-  font-size: 26px;
+  font-size: 15px;
 }
 
 *:focus,
